Классы и методы "Участия в событии"